<resources>
    <string name="app_name">Daily Advice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_advice">Share advice</string>
    <string name="advice_id">Advise %1$d</string>
    <string name="advice_text">Good advice is something a man gives when he is too old to set a bad example.</string>
    <string name="error">Oops, something went wrong!</string>
    <string name="checkInternet">Couldn\'t reach server, check your internet connection.</string>
    <string name="unknownError">Unknown error</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="settings">Settings</string>
    <string name="subscription">Subscription</string>
    <string name="manage_subscription">Manage subscription</string>
    <string name="preferences">Preferences</string>
    <string name="reminders">Reminders</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="support_us">Support us</string>
    <string name="rate_us">Rate us</string>
    <string name="contact">Contact</string>
    <string name="donate_for_creators">Donate for creators</string>
    <string name="become_a_supporter">Become a supporter. Support how you see fit</string>
    <string name="coffee">Coffee</string>
    <string name="other">Other</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="title_notification_reminder">Daily advice</string>
    <string name="reminders_notification_channel_name">Notification Service</string>
    <string name="select_theme">Select Theme</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select Language</string>
    <string-array name="language">
        <item>English</item>
        <item>Ukrainian</item>
        <item>Russian</item>
        <item>German</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>
    <string name="application_not_found">Application not found</string>
    <string name="send_email">Send email</string>
    <string name="select_time">Select time</string>
</resources>