<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_start_end"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_start_end"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_top_bottom"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_top_bottom"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toTopOf="@+id/topGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/bottomGuideline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_setting_menu">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chevron_left" />

                <TextView
                    android:id="@+id/title"
                    style="@style/SettingsTitleText"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"/>

            </LinearLayout>


            <TextView
                android:id="@+id/preferences"
                style="@style/SettingsCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences"
                android:layout_marginTop="@dimen/margin_top_bottom"/>

        <LinearLayout
            android:id="@+id/remindersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_setting_menu">

            <TextView
                style="@style/SettingsMenuText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reminders"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_chevron_right"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/languageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_setting_menu">

                <TextView
                    style="@style/SettingsMenuText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_chevron_right"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/themeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_setting_menu">

                <TextView
                    style="@style/SettingsMenuText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/theme"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_chevron_right"/>

            </LinearLayout>

            <TextView
                android:id="@+id/support_us"
                style="@style/SettingsCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_us"
                android:layout_marginTop="@dimen/margin_top_between_setting_menu_title"/>

            <TextView
                android:id="@+id/rateUsButton"
                style="@style/SettingsMenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:layout_marginTop="@dimen/margin_top_setting_menu" />

            <TextView
                android:id="@+id/contactButton"
                style="@style/SettingsMenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_marginTop="@dimen/margin_top_between_setting_menu" />

            <TextView
                android:id="@+id/donateForCreators"
                style="@style/SettingsCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_for_creators"
                android:layout_marginTop="@dimen/margin_top_between_setting_menu_title"/>

            <TextView
                android:id="@+id/becomeASupporter"
                style="@style/SettingsMenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/become_a_supporter"
                android:layout_marginTop="@dimen/margin_top_setting_menu"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/donate_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_setting_menu"
                    android:layoutAnimation="@anim/recycler_view_animation"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/donate_item" />

            </RelativeLayout>

            <TextView
                android:id="@+id/other"
                style="@style/SettingsCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_marginTop="@dimen/margin_top_between_setting_menu_title"/>

            <TextView
                android:id="@+id/privacyPolicyButton"
                style="@style/SettingsMenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_marginTop="@dimen/margin_top_setting_menu" />

            <TextView
                android:id="@+id/termsConditionsButton"
                style="@style/SettingsMenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:layout_marginTop="@dimen/margin_top_between_setting_menu" />

            <TextView
                android:id="@+id/version"
                style="@style/SettingsCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_between_setting_menu_title"
                android:text="1.0.0" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>