<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/layout"
    tools:context=".presentation.advice.AdviceFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_start_end"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_start_end"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_top_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_top_bottom"/>

    <TextView
        android:id="@+id/refreshText"
        style="@style/AdviseId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/swipe_to_refresh"
        app:layout_constraintBottom_toBottomOf="@+id/swipeRefreshLayout"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/swipeRefreshLayout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/shareAdviceButton"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/appName">

        <LinearLayout
            android:id="@+id/adviceLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/appName">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/icon_advice_margin_bottom"
                android:src="@drawable/icon_pink"
                app:layout_constraintBottom_toTopOf="@+id/adviceId" />

            <TextView
                android:id="@+id/adviceId"
                style="@style/AdviseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/advice_id"
                app:layout_constraintBottom_toTopOf="@+id/shareAdviceButton"
                app:layout_constraintTop_toBottomOf="@+id/appName" />

            <TextView
                android:id="@+id/adviceText"
                style="@style/AdviseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/advice_margin_top"
                android:text="@string/advice_text"
                app:layout_constraintTop_toBottomOf="@+id/adviceId" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppName"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@+id/appName"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareAdviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_gravity="center"
        android:text="@string/share_advice"
        android:drawableStart="@drawable/share"
        android:drawablePadding="@dimen/padding_icon_end"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>